# cpp-course

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  cmake-build.yml  valgrind-build.yml
shared/: noncopyable.hpp
week-1/: CMakeLists.txt
week-1/task-01-01/: CMakeLists.txt
week-1/task-01-01/include/: main1.hpp  main2.hpp  main3.hpp  main4.hpp  main5.hpp
week-1/task-01-01/src/: main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp
week-10/: CMakeLists.txt
week-10/task-07-01/include/: quadratic-equation.hpp
week-10/task-07-01/test/: CMakeLists.txt  test-07-01.cpp
week-11/: CMakeLists.txt
week-11/task-09-02/: CMakeLists.txt
week-11/task-09-02/include/: logger.hpp
week-11/task-09-02/test/: CMakeLists.txt  test-09-02.cpp
week-11/task-09-05/include/: noncopyable.hpp  unique.hpp
week-11/task-09-05/test/: CMakeLists.txt  test-09-05.cpp
week-11/task-09-06/: CMakeLists.txt
week-11/task-09-06/include/: shared.hpp
week-11/task-09-06/test/: CMakeLists.txt  test-09-06.cpp
week-11/task-09-09/include/: find.hpp
week-11/task-09-09/test/: CMakeLists.txt  test-09-09.cpp
week-11/task-09-11/include/: list.hpp
week-11/task-09-11/test/: CMakeLists.txt  test-09-11.cpp
week-11/task-09-14/include/: odd-iterator.hpp
week-11/task-09-14/test/: CMakeLists.txt  test-09-14.cpp
week-12/: CMakeLists.txt
week-12/task-11-01/include/: self-pointed-function.hpp
week-12/task-11-01/test/: CMakeLists.txt  test-11-01.cpp
week-12/task-11-03/include/: factory.hpp
week-12/task-11-03/test/: CMakeLists.txt  test-11-03.cpp
week-12/task-11-06/include/: circle.hpp  ivisitor.hpp  serializer.hpp  shape.hpp  square.hpp  triangle.hpp
week-12/task-11-06/test/: CMakeLists.txt  test-11-06.cpp
week-13/: CMakeLists.txt
week-13/task-11-10/include/: smth_of.hpp
week-13/task-11-10/test/: CMakeLists.txt  test-11-10.cpp
week-13/task-11-11/include/: transform_if.hpp
week-13/task-11-11/test/: CMakeLists.txt  test-11-11.cpp
week-13/task-11-16/test/: CMakeLists.txt  test-11-16.cpp
week-14/: CMakeLists.txt
week-14/task-12-06/include/: title_case.hpp
week-14/task-12-06/test/: CMakeLists.txt  test-12-06.cpp
week-14/task-12-07/include/: join.hpp
week-14/task-12-07/test/: CMakeLists.txt  test-12-07.cpp
week-14/task-12-08/include/: tokenize.hpp
week-14/task-12-08/test/: CMakeLists.txt  test-12-08.cpp
week-2/: CMakeLists.txt
week-2/task-02-03/: CMakeLists.txt
week-2/task-02-03/include/: prime-nums.hpp
week-2/task-02-03/test/: CMakeLists.txt  test-02-03.cpp
week-2/task-02-05/: CMakeLists.txt
week-2/task-02-05/include/: eulers-num.hpp
week-2/task-02-05/src/: main.cpp
week-2/task-02-05/test/: CMakeLists.txt  test-02-05.cpp
week-2/task-02-06/: CMakeLists.txt
week-2/task-02-06/include/: prime_numbers.hpp
week-2/task-02-06/src/: main.cpp
week-2/task-02-06/test/: CMakeLists.txt  test-02-06.cpp
week-3/: CMakeLists.txt
week-3/task-02-14/include/: algorithms.hpp
week-3/task-02-14/test/: CMakeLists.txt  test-02-14.cpp
week-3/task-03-01/: CMakeLists.txt
week-3/task-03-01/include/: point.hpp  rectangle.hpp  rectangles.hpp  rectangular_intersection.hpp
week-3/task-03-01/src/: main.cpp
week-3/task-03-01/test/: CMakeLists.txt  test-03-01.cpp
week-4/: CMakeLists.txt
week-4/task-03-03/include/: circle.hpp  ellipse.hpp  polygon.hpp  rectangle.hpp  shape.hpp  square.hpp  triangle.hpp
week-4/task-03-03/test/: CMakeLists.txt  test-03-03.cpp
week-4/task-03-04/include/: ambiguous.hpp
week-4/task-03-04/test/: CMakeLists.txt  test-03-04.cpp
week-4/task-03-05/include/: different_inheritance.hpp
week-4/task-03-05/test/: CMakeLists.txt  test-03-05.cpp
week-5/: CMakeLists.txt
week-5/task-03-06/include/: container.hpp
week-5/task-03-06/test/: CMakeLists.txt  test-03-06.cpp
week-5/task-03-07/include/: ipv4.hpp
week-5/task-03-07/test/: CMakeLists.txt  test-03-07.cpp
week-6/: CMakeLists.txt
week-6/task-04-06/include/: multipush_back.hpp
week-6/task-04-06/test/: CMakeLists.txt  test-04-06.cpp
week-6/task-04-09/: CMakeLists.txt
week-6/task-04-09/include/: eulers-num.hpp
week-6/task-04-09/test/: CMakeLists.txt  test-04-09.cpp
week-7/: CMakeLists.txt
week-7/task-04-12/include/: const_manipulations.hpp
week-7/task-04-12/test/: CMakeLists.txt  test-04-12.cpp
week-7/task-04-13/: CMakeLists.txt
week-7/task-04-13/include/: decay.hpp
week-7/task-04-13/test/: CMakeLists.txt  test-04-13.cpp
week-7/task-04-14/include/: is_class.hpp
week-7/task-04-14/test/: CMakeLists.txt  test-04-14.cpp
week-8/: CMakeLists.txt
week-8/task-05-11/include/: capitalized_text.hpp  text.hpp  text_from_file.hpp  text_from_string.hpp  trimmed_text.hpp
week-8/task-05-11/test/: CMakeLists.txt  test-05-11.cpp
week-8/task-05-20/include/: capitalized_text.hpp  text.hpp  text_from_file.hpp  text_from_string.hpp  trimmed_text.hpp
week-8/task-05-20/test/: CMakeLists.txt  test-05-20.cpp
week-9/: CMakeLists.txt
week-9/task-06-01/: CMakeLists.txt
week-9/task-06-01/include/: entity.hpp
week-9/task-06-01/src/: entity.cpp  main.cpp
week-9/task-06-03/: CMakeLists.txt
week-9/task-06-03/src/: entity.cppm  main.cpp
week-W/: CMakeLists.txt
week-W/task-W-T/: CMakeLists.txt
week-W/task-W-T/test/: CMakeLists.txt  test-template.cpp
